--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -1,7 +1,9 @@
 .navbar {
     display: flex;
+    justify-content: space-between;
     background: #fff;
     height: 4rem;
+    max-width: 100vw;
     @media (min-width: 768px) {
         height: 5rem;
         border-bottom: 1px solid #E4EBFA;
@@ -27,7 +29,7 @@
         }
     .navbar-left {
         display: flex;
-        flex-grow: 2;
+        
         align-items: center;
         .board-name {
             display: flex;
