change folder structure

--- a/src/style/viewTask.module.scss
+++ b/src/style/viewTask.module.scss
@@ -79,7 +79,7 @@
                     width: 1rem;
                     height: 1rem;
                     background: #635FC7;
-                    content: url("../../assets/icon-check.svg");
+                    content: url("../assets/icon-check.svg");
                 }
               
             }
