--- a/src/style/boardGrid.module.scss
+++ b/src/style/boardGrid.module.scss
@@ -31,27 +31,33 @@
         }
         
         .cell-task {
-            cursor: pointer;
-            margin-left: 1rem;
-            display: flex;
-            flex-direction: column;
-            gap: 0.45rem;
-            justify-content: center;
-            font-size: 0.9375rem;
-            background: #fff;
-            width: 15.5rem;
-            border-radius: 8px;
-            box-shadow: 0px 4px 6px 0px rgba(54, 78, 126, 0.10);
-            padding: 1.44rem 1rem;
-            margin-bottom: 1.3rem;
-            .task-name {
-        
+            
+            .wrapper {
+                
+                cursor: pointer;
+                    margin-left: 1rem;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0.45rem;
+                    justify-content: center;
+                    font-size: 0.9375rem;
+                    background: #fff;
+                    width: 15.5rem;
+                    border-radius: 8px;
+                    box-shadow: 0px 4px 6px 0px rgba(54, 78, 126, 0.10);
+                    padding: 1.44rem 1rem;
+                    margin-bottom: 1.3rem;
+            
+                .task-name {
+                       
+                }
+                .substask {
+                    color: #828FA3;
+                    font-size: 0.75rem;
+                    font-weight: 500;
+                }
             }
-            .substask {
-                color: #828FA3;
-                font-size: 0.75rem;
-                font-weight: 500;
-            }
+          
         }
 
     }
