--- a/src/style/editTask.module.scss
+++ b/src/style/editTask.module.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.50);
+    // background: rgba(0, 0, 0, 0.50);
     display: flex;
     flex-direction: column;
     align-items: center;
