--- a/src/style/newBoard.module.scss
+++ b/src/style/newBoard.module.scss
@@ -11,10 +11,7 @@
         align-items: center;
         justify-content: center;
         .modal {
-            overflow: scroll;
-            &::-webkit-scrollbar {
-                    display: none;
-            }
+            overflow-y: scroll;
             // position: relative;
             margin: 0 1rem;
             max-width: 30rem;
