--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
 * {
   margin: 0;
   padding: 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 body {
@@ -13,6 +19,10 @@ body {
   -moz-osx-font-smoothing: grayscale; */
   background: #F4F7FD;
   color: #000112;
+}
+
+body.modal-open {
+  overflow-y: hidden;
 }
 
 button {
