--- a/src/style/editBoard.module.scss
+++ b/src/style/editBoard.module.scss
@@ -10,11 +10,7 @@
         align-items: center;
         justify-content: center;
     .modal { 
-        overflow: scroll;
-        
-            &::-webkit-scrollbar {
-                display: none;
-            }
+        overflow-y: scroll;
         // position: relative;
         background: #fff;
         border-radius: 6px;
