--- a/src/style/viewTask.module.scss
+++ b/src/style/viewTask.module.scss
@@ -9,11 +9,7 @@
         justify-content: center;
         align-items: center;
     .modal {
-            // overflow: scroll;
-        
-            // &::-webkit-scrollbar {
-            //     display: none;
-            // }
+            overflow-y: scroll;
             // position: absolute;
             background: #fff;
             border-radius: 6px;
