--- a/src/style/navbar.module.scss
+++ b/src/style/navbar.module.scss
@@ -11,22 +11,35 @@
     @media (min-width: 992px) {
         height: 6rem;
     }
-        .display-mobile-logo {
-            padding: 1rem;
-        }
-        .display-dark-logo, .display-light-logo {
+    .show-sidebar {
+        position: fixed;
+        bottom: 2rem;
+        left: 0;
+        background: #635FC7;
+        border-radius: 0px 100px 100px 0px;
+        width: 3.5rem;
+        height: 3rem;      
+        @media (max-width: 768px) {
             display: none;
         }
-        @media (min-width: 768px) {
-            .display-dark-logo {
-                display: inline-block;
-                z-index: 0;
-                padding: 1.5rem;
-            }
-            .display-mobile-logo {
-                display: none;
-            }
+    }
+
+    .display-mobile-logo {
+        padding: 1rem;
+    }
+    .display-dark-logo, .display-light-logo {
+        display: none;
+    }
+    @media (min-width: 768px) {
+        .display-dark-logo {
+            display: inline-block;
+            z-index: 0;
+            padding: 1.5rem;
         }
+        .display-mobile-logo {
+            display: none;
+        }
+    }
     .navbar-left {
         display: flex;
         
@@ -40,7 +53,7 @@
             @media (min-width: 768px) {
                 font-size: 1.25rem;
                 padding: 1.5rem;
-                button {
+                .chevron {
                     display: none;
                 }
             }
