--- a/src/style/boardGrid.module.scss
+++ b/src/style/boardGrid.module.scss
@@ -4,10 +4,10 @@
     grid-auto-columns: 17.5rem;
     grid-auto-flow: column;
     gap: 1.5rem;
-    margin: 0.5rem 0rem;
-    min-height: 100vh;
+    // margin: 0.5rem 0;
+    // max-height: 100vh;
     @media (min-width: 768px) {
-        margin: 0.45rem 0.5rem;
+     
     }
     .column {  
         .column-name {
@@ -38,7 +38,7 @@
                 justify-content: center;
                 font-size: 0.9375rem;
                 background: #fff;
-                width: 15.5rem;
+                width: 17.5rem;
                 border-radius: 8px;
                 box-shadow: 0px 4px 6px 0px rgba(54, 78, 126, 0.10);
                 padding: 1.44rem 1rem;
@@ -69,4 +69,8 @@
         font-weight: 700;
     }
 }
-
+.sidebar-open {
+    @media (min-width: 768px) {
+        margin-left: 16.4rem;
+    }
+}
