--- a/src/style/selectBoard.module.scss
+++ b/src/style/selectBoard.module.scss
@@ -1,38 +1,37 @@
 .modal-bg {
-    position: fixed;
+    position: absolute;
     top: 4rem;
     left: 0;
     width: 100vw;
     height: 100vh;
-    height: calc(100vh - 4rem);
     background: rgba(0, 0, 0, 0.50);
     @media (min-width: 768px) {
-        top: 0;
-        width: 100vw;
-        height: 100vh;
+        top: 0rem;
+        width: 0vw;
+        height: 0vh;
         background: none;
     }
     .modal {
+        position: relative;
+        top: 1rem;
+        left: 1.5rem;
+        width: 16.4rem;
         color: #828FA3;
         font-weight: 500;
         font-size: 0.75rem;
         letter-spacing: 0.15rem;
         display: flex;
-        gap: 1rem;
+        // gap: 1rem;
         flex-direction: column;
-        position: absolute;
-        top: 1rem;
-        left: 1.5rem;
-        // transform: translate(21%, 5%);
         z-index: 100;
         background: #fff;
-        width: 16.4rem;
-        // height: 20.125rem;
         border-radius: 8px;
         box-shadow: 0px 10px 20px 0px rgba(54, 78, 126, 0.25);
         @media (min-width: 768px) {
+            position: fixed;
             top: 0rem;
             left: 0rem;
+            right: 0rem;
             height: 100vh;
             transform: translate(0%, 0%);
             box-shadow: none;
