--- a/src/style/editTask.module.scss
+++ b/src/style/editTask.module.scss
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     .modal {
-        overflow-y: scroll;
+        // overflow-y: scroll;
         // position: ;
         background: #fff;
         border-radius: 6px;
