--- a/src/style/viewTask.module.scss
+++ b/src/style/viewTask.module.scss
@@ -9,8 +9,8 @@
         justify-content: center;
         align-items: center;
     .modal {
-            overflow-y: scroll;
-            // position: absolute;
+            // overflow-y: scroll;
+            position: relative;
             background: #fff;
             border-radius: 6px;
             margin: 0 1rem;
@@ -60,7 +60,6 @@
                 display: flex;
                 align-items: center;
                 gap: 1rem;
-
                 
                 input[type="checkbox"] {
                     min-height: 1rem;
