--- a/src/style/editBoard.module.scss
+++ b/src/style/editBoard.module.scss
@@ -81,4 +81,11 @@
             margin-bottom: 0.5rem;
         }
     }
+    .modal-dark {
+        background: #2B2C37;
+        input {
+            background: #2B2C37;
+            color: #fff;
+        }
+    }
 }
