--- a/src/style/newTask.module.scss
+++ b/src/style/newTask.module.scss
@@ -108,4 +108,12 @@
         }
 
     }
+    .modal-dark {
+        background: #2B2C37;
+        input, textarea {
+            background: #2B2C37;
+            color: #fff;
+            opacity: 1;
+        }
+    }
 }   
