--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,9 @@ body {
   color: #000112;
   overscroll-behavior: none;
 }
+// body .dark {
+//   background: #20212C;
+// }
 
 /* body.modal-open {
   overflow-y: hidden;
@@ -52,4 +55,11 @@ input[type="checkbox"] {
   background-color: #fff;
   /* Not removed via appearance */
   margin: 0;
+}
+
+.dark {
+  /* very dark gray */
+  background: #20212C;
+  color: #fff;
+  min-height: 100vh;
 }
