--- a/src/style/editTask.module.scss
+++ b/src/style/editTask.module.scss
@@ -24,19 +24,20 @@
         // transform: translate(0%, 33.5%);
         h1 {
             font-size: 1.125rem;
+            color: #fff;
         }
         input {
             padding: 1rem;
             // height: 2.5rem;
             border-radius: 4px;
             border: 1px solid #828fa340;
-            ::placeholder {
-                font-size: 0.8125rem;
-                font-weight: 500;
-                line-height: 1.4375rem;
-                opacity: 0.25;
+                ::placeholder {
+                    font-size: 0.8125rem;
+                    font-weight: 500;
+                    line-height: 1.4375rem;
+                    opacity: 0.25;
+                    }
             }
-        }
                 label {
                     color: #828FA3;
                     font-size: 0.75rem;
@@ -102,7 +103,18 @@
                     font-size: 0.8125rem;
                     line-height: 1.4375rem;
                 }
-    }        
+    } 
+    .modal-dark {
+        background: #2B2C37;
+        input, textarea {
+            background: #2B2C37;
+            color: #fff;
+            opacity: 1;
+        }    
+        ::placeholder, label, textarea {
+            color: #fff;
+        }   
+    }
 }
 
 
