--- a/src/style/selectBoard.module.scss
+++ b/src/style/selectBoard.module.scss
@@ -45,10 +45,10 @@
         }
         
         @media (min-width: 768px) {
-            .display-dark-logo {
+            .display-dark-logo, .display-light-logo {
                 // position: fixed;
                 display: inline-block;
-                z-index: 101;
+                // z-index: 101;
                 margin-top: 0.8rem;
                 padding: 0.6rem;
             }
@@ -130,7 +130,6 @@
                         height: 1.25rem;
                         background: #635FC7;
                         border-radius: 20px;
-            
                         .slider {
                             position: absolute;
                             right: 0;
@@ -139,6 +138,11 @@
                             width: 0.9rem;
                             height: 0.9rem;
                             background: #fff;
+                            transition: 0.5s;
+                        }
+                        .slider-right {
+                            transform: translate(135%, 20%);
+                            transition: 0.5s;
                         }
                     }
                 }
@@ -157,6 +161,16 @@
                     }
                 }
         }
+    }
+    .modal-dark {
+        background: #2B2C37;
+        border-right: 1px solid #3E3F4E;
+        .modal-bottom {
+            .display-mode {
+                background: #20212C;
+            }
+        }
+        
     }
     
 }
