--- a/src/style/deleteModal.module.scss
+++ b/src/style/deleteModal.module.scss
@@ -35,8 +35,11 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
+            @media (min-width: 768px) {
+                flex-direction: row;
+            }
             button {
-                // width: 100%;
+                    width: 100%;
                     height: 2.5rem;
                     font-weight: 700;
                     text-align: center;
