fix modal behaviour

--- a/src/style/boardGrid.module.scss
+++ b/src/style/boardGrid.module.scss
@@ -61,6 +61,7 @@
     }
     .add-column {
         width: 17.5rem;
+        height: 51rem;
         margin: 3.5rem 1rem 0rem 1rem;
         cursor: pointer;
         display: flex;
