--- a/src/style/select.module.scss
+++ b/src/style/select.module.scss
@@ -38,6 +38,7 @@
             }
         }
     .options.show {
+        position: absolute;
         padding: 1rem;
         display: block;
         border-radius: 0.5rem;
