--- a/src/style/viewTask.module.scss
+++ b/src/style/viewTask.module.scss
@@ -54,8 +54,6 @@
                 border-radius: 4px;
                 background: #F4F7FD;
                 font-size: 0.75rem;
-                // text-decoration-line: strikethrough;
-                // opacity: 0.5;
                 margin-bottom: 0.5rem;
                 min-height: 2.5rem;
                 padding: 0.81rem 0.5rem .75rem 1rem;
@@ -77,8 +75,16 @@
                     height: 1rem;
                     background: #635FC7;
                     content: url("../assets/icon-check.svg");
+                   
                 }
               
+            }
+            .completed {
+                text-decoration: line-through;
+                opacity: 0.5;
+            }
+            .subtask:hover{
+                background: rgba(#635FC7, 0.2489);
             }
     }
     .modal-dark {
